--- a/iDeals Website/index.html
+++ b/iDeals Website/index.html
@@ -3,12 +3,31 @@
 <head>
     <title>iDeals</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" data-auto-replace-svg="nest"></script>
 </head>
 
 <body>
 
-    <div class="container">
+    <div class = "container">
         
+        <div class = "search-box">
+            <input class = "search-txt" type ="text" name = "" placeholder = "Cari Produk">
+            <a class ="search-button" href = "#">
+                <i class="fas fa-search"></i>
+            </a>
+        </div>
+
+        <div class = "menu">
+            <ul>
+                <li>Home</li>
+                <li>Promo</li>
+                <li>Kupon</li>
+                <li>Menu</li>
+                <li>Masuk</li>
+                <li>Daftar</li>
+            </ul> 
+        </div>
+
     </div>
 
 
