--- a/iDeals Website/index.html
+++ b/iDeals Website/index.html
@@ -11,7 +11,7 @@
     <div class = "container">
         
         <div class = "search-box">
-            <input class = "search-txt" type ="text" name = "" placeholder = "Cari Produk">
+            <input class = "search-txt" type ="text" name = "" placeholder = "Find Products">
             <a class ="search-button" href = "#">
                 <i class="fas fa-search"></i>
             </a>
@@ -19,19 +19,40 @@
 
         <div class = "menu">
             <ul>
-                <li>Home</li>
-                <li>Promo</li>
-                <li>Kupon</li>
-                <li>Menu</li>
-                <li>Masuk</li>
-                <li>Daftar</li>
+                <li class ="logo"> <img src = "diamond.png"> </li>
+                <li class ="home-active" > Home </li>
+                <li class ="deals-active"> Deals </li>
+                <li class ="voucher-active"> Voucher </li>
+                <li class ="menu-active"> Menu </li>
+                <li> <a href = "#" class = "signin-button"> <span> Sign In </span> </a> </li>
+                <li> <a href = "#" class = "post-button"> <span> Post </span> </a> </li>
             </ul> 
         </div>
 
+        <div class = "submenu">
+            <ul>
+                <li class ="highlights-active" > Highlights </li>
+                <li class ="hot-active" > Hot </li>
+                <li class ="actual-active" > Actual </li>
+                <li class ="discussion-active" > Discussion </li>
+                <li> <a href = "#" class = "filter-button"> <span> Filter </span> </a> </li>
+            </ul> 
+        </div>
+
+        <div class = "contents">
+            <ul>
+                <li class ="box"> ========================================================================================== </li>
+                <li class ="box2"> ========================================================================================== </li>
+            </ul> 
+        </div>
+
+        <div class = "subcontents">
+            <ul>
+                <li class ="box3"> ================================ </li>
+                </ul> 
+        </div>
+
     </div>
-
-
-
 
 </body>
 
